# OpenPKPD

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Project.toml  README.md  README_.md  RELEASING.md  index.html  mkdocs.yml  sitemap.xml
cli/: index.html
python/: index.html  pyproject.toml
python/data/: index.html
python/data/cdisc/: index.html
python/data/monolix/: index.html
python/data/nonmem/: index.html
python/estimation/: index.html
python/estimation/bootstrap/: index.html
python/estimation/comparison/: index.html
python/estimation/diagnostics/: index.html
python/estimation/foce/: index.html
python/estimation/laplacian/: index.html
python/estimation/saem/: index.html
python/models/: index.html
python/nca/: index.html
python/nca/bioequivalence/: index.html
python/nca/config/: index.html
python/nca/population/: index.html
python/nca/run-nca/: index.html
python/openpkpd/: __init__.py  bridge.py
python/population/: index.html
python/population/covariates/: index.html
python/population/iv-bolus/: index.html
python/population/oral/: index.html
python/scripts/: smoke_python.sh
python/tests/: test_replay.py
python/trial/: index.html
python/trial/designs/: index.html
python/trial/dosing/: index.html
python/trial/population/: index.html
python/trial/power/: index.html
python/tutorial/: index.html
python/viz/: index.html
python/viz/backends/: index.html
python/viz/bootstrap/: index.html
python/viz/estimation/: index.html
python/viz/nca/: index.html
python/vpc/: index.html
(+500 files in other folders)
